// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrate tCore resources Test grc resource migration test with newer version of ugnt in el-x-koine/bible - newer version should not be deleted 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.3_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test grc resource migration test with older version of ugnt in grc/bible - should be removed 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test grc resource migration test with older version of xx in grc/bible - should not move 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/xx/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test grc resource migration test with two version of ugnt in el-x-koine/bible - all versions copied 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.3_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test grc resource migration test with xx in grc/bible - should migrate to el-x-koine 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/xx/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with current el-x-koine tHelps resources - should not delete 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with empty hbo bibles folder - should upgrade 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with empty hbo language folder - should upgrade 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with empty uhb folder - should upgrade 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with no user resources 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with old el-x-koine tHelps resources (no manifest.json) - should update 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with old en_ult - should delete old version 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with old tHelps resources - should delete 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with t4t - should not delete 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/en/bibles/t4t/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with t4t, old tHelps resources and not up to date resources - should remove old helps and keep old bibles 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/t4t/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with t4t, old tHelps resources and up to date resources - should not delete anything 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/t4t/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/x-test/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with t4t, old tHelps resources and up to date resources - should not delete anything 2`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/t4t/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/x-test/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources Test without grc resource migration test with t4t, old tHelps resources, up to date resources and different app version - should remove old helps and keep old bibles 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/t4t/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;

exports[`migrate tCore resources test with two version of ugnt in el-x-koine/bible and a recent dependency - all versions copied 1`] = `
Array [
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.2_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/bibles/ugnt/v0.3_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/el-x-koine/translationHelps/translationWords/v8_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ult/v12.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/bibles/ust/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationAcademy/v9_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationNotes/v15_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/en/translationHelps/translationWords/v10_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hbo/bibles/uhb/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/ugl/v0_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/lexicons/uhl/v0.1_Door43-Catalog",
  "/Users/jest/mock/path/translationCore/resources/hi/translationHelps/translationWords/v8.1_Door43-Catalog",
]
`;
